pkg/i2gw/providers/istio/fixtures/output/2-virtualservice-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews-route-v2
  namespace: test
spec:
  hostnames:
  - reviews.prod.svc.cluster.local
  - reviews.test.svc.cluster.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /wpcatalog
      headers:
      - type: Exact
        name: h1
        value: v1
      queryParams:
      - type: Exact
        name: q1
        value: v2
      method: "GET"
    - path:
        type: Exact
        value: /consumercatalog
      headers:
      - type: RegularExpression
        name: h2
        value: v3
      queryParams:
      - type: RegularExpression
        name: q2
        value: v4
    - path:
        type: RegularExpression
        value: "/catalog[0-9]+"
    backendRefs:
    - name: reviews
      namespace: prod
      weight: 0
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: http
        path:
          type: ReplaceFullPath
          replaceFullPath: /v1/bookRatings
        statusCode: 302
        port: 8080
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: reviews
          namespace: test
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: h1
          value: v1
        set:
        - name: h2
          value: v2
        remove:
        - h3
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: h4
          value: v4
        set:
        - name: h5
          value: v5
        remove:
        - h6
    timeouts:
      request: 5s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews-route-mirrors-match
  namespace: test
spec:
  hostnames:
  - reviews.prod.svc.cluster.local
  - reviews.test.svc.cluster.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /wpcatalog
    filters:
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: reviewsA
          namespace: test
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: reviewsB
          namespace: prod
