pkg/i2gw/providers/istio/fixtures/output/3-virtualservice-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: reviews-route-idx-0
  namespace: test
spec:
  hostnames:
  - login.bookinfo.com
  rules:
    - backendRefs:
      - name: login
        namespace: prod
        weight: 0
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: reviews-route-idx-1
  namespace: test
spec:
  hostnames:
  - reviews.bookinfo.com
  rules:
    - backendRefs:
      - name: reviews
        namespace: test
        weight: 0
