pkg/i2gw/providers/istio/fixtures/output/5-referencegrants.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: prod
spec:
  gatewayClassName: istio
  listeners:
  - name: http-protocol-wildcard-ns-test.com
    hostname: test.com
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: same-ns-gateway
  namespace: custom-ns
spec:
  gatewayClassName: istio
  listeners:
  - name: http-protocol-wildcard-ns-test.com
    hostname: test.com
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews-route-idx-0
  namespace: custom-ns
spec:
  hostnames:
  - test.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: prod
    name: my-gateway
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: same-ns-gateway
  rules:
  - backendRefs:
    - namespace: prod
      name: test
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferenceGrant
metadata:
  name: generated-reference-grant-from-custom-ns-to-prod
  namespace: prod
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: custom-ns
  to:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: my-gateway
