pkg/i2gw/providers/istio/fixtures/output/6-virtualservice-http-rewrite.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: virtualservice-test
  namespace: test
spec:
  hostnames:
  - reviews.prod.svc.cluster.local
  rules:
  - matches:
    - path:
        type: Exact
        value: /consumercatalog
    - path:
        type: RegularExpression
        value: "/catalog[0-9]+"
    backendRefs:
    - name: reviews
      namespace: prod
      weight: 0
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replaceFullPath: /newcatalog
          type: ReplaceFullPath
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: virtualservice-test-prefix-match
  namespace: test
spec:
  hostnames:
  - reviews.prod.svc.cluster.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /wpcatalog
    backendRefs:
    - name: reviews
      namespace: prod
      weight: 0
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /newcatalog
          type: ReplacePrefixMatch
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: no-uri-matches-route-prefix-match
  namespace: test
spec:
  hostnames:
  - reviews.test.svc.cluster.local
  rules:
  - matches:
    - headers:
      - type: Exact
        name: h1
        value: v1
    backendRefs:
    - name: reviews
      namespace: test
      weight: 0
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /newcatalog
          type: ReplacePrefixMatch
